app/assets/stylesheets/yori_book.scss
.main-wrapper {
    position: relative;
    margin: auto;
    width: 90%;
    height: 100vh;
    display: flex; 
}

.main-wrapper.yoribook {
    background-image: image-url('openbook.png');
    background-position: center;
    background-size: 100% 98%;
    background-repeat: no-repeat;
    padding: 3%; 
}

.cover-wrapper {
    width: 100%;
    height: 100%;
    display: flex;
    flex-flow: column wrap;
    padding: 10px;
}

.recipe-wrapper,
.comment-wrapper {
    background-color: rgba(255, 0, 0, 0.5); 
}

.recipe-wrapper {
    width: 48%;
    position: relative;
    left: 1%;
    height: calc(50% - 16px);
    margin-top: 8px;
    margin-bottom: 8px;
    border: 1px solid gray;
    background-color: white;
    border-radius: .5em;
    display: flex;
    padding: 5px; 
}

input {
  margin-left: 1em; 
}

.recipe-left,
.recipe-right {
  width: 50%;
  height: 100%; 
}

.recipe-right {
    padding: 19px 2px 19px 20px; 
    font-size: 1.5em;
    overflow: hidden;
        
        p {
            // margin-top: 15%;
            text-align: left;
            font-family: godo;
            font-size: .7em;
            background-position: bottom, right;
             span {
                font-family: godoMaum;
                font-size: 1.2em;
                color: gray;
            }
        }
        
       
            
            .recipe-right p:first-of-type {
                margin-top: 0; 
            }
}

.recipe-picture-wrapper {
    height: 75%;
    background-position: top, left;
    border: 1px solid gray;
    background-color: white; 
}

.recipe-name-wrapper {
    height: 25%;
    border: 1px solid black;
    background-position: bottom, left; 
}

#demo_book {
    width: 100%;
    height: 100%;
}

.bar {
    font-size: 1em;
    padding: .5em 1.3em;
    background: transparent;
    border: 1px solid #ddd;
    border-radius: 2em; 
        .bar:focus {
            border-color: #A5CEF5;
            outline: none; 
        }
}

button {
    margin-left: 1em; 
}

.navi-tab {
    position: absolute;
    top: 10vh;
    left: -50px;
    
    a:hover {
        text-decoration: none;
        button {
            color: white;
        }
    }
}

.book-tab {
    position: absolute;
    bottom: 0vh;
    right: -45px;
    
    button:hover {
        text-decoration: none;
        color: white;
    }
}

.book-tab,
.navi-tab {
    font-size: 24px;
}
  
.book-tab button,    
.navi-tab button {
    display: block;
    padding: 10px 10px;
    margin-bottom: 8vh;
    width: 100px;
    height: 50px;
    border: none;
    outline: none;
    text-align: center;
    cursor: pointer;
    transition: 0.3s;
    position: relative;
}

.navi-tab button {
    border-radius: 10px 10px 0px 0px; 
    background-color: rgba(200,200,200, 1);
    transform: rotate(-90deg);
}

.book-tab button {
    border-radius: 10px 10px 0px 0px; 
    background-color: tomato;
    transform: rotate(90deg);
}

.recipe-upload {
    position: relative;
    top: 10px;
    width: 105px;
}

.page-center {
    text-align: center;
}

.pagination a {
    color: black;
    padding: 8px 16px;
    text-decoration: none;
    transition: background-color .3s; 
}

.pagination a.active {
    background-color: dodgerblue;
    color: white; 
}

.pagination a:hover:not(.active) {
    background-color: #ddd; 
}

